--- a/course.html
+++ b/course.html
@@ -2,7 +2,9 @@
 <html>
     <!-- Setting CSS and title -->
     <head>
-        <link rel="stylesheet" href="style.css" >
+        <link rel="stylesheet" href="indexstyle.css" >
+        <link rel="stylesheet" href="courseratingstyle.css" >
+        <link rel="stylesheet" type="text/css" href="poststyle.css" >
         <!-- Stylesheet to make stars -->
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
           <title>
