--- a/course.html
+++ b/course.html
@@ -29,7 +29,9 @@
         </h2>
         <h4>
           Rating: <!-- Temporary stars to prove the fa stars work -->
-          <i class = 'fa fa-star checked' style="font-size:40px"></i> <i class = 'fa fa-star checked' style="font-size:40px"></i> <i class = 'fa fa-star unchecked' style="font-size:40px"></i> <i class = 'fa fa-star unchecked' style="font-size:40px"></i> <i class = 'fa fa-star unchecked' style="font-size:40px"></i>
+          <i class = 'fa fa-star checked' style='font-size:40px'></i> <i class = 'fa fa-star checked' style='font-size:40px'></i> <i class = 'fa fa-star unchecked' style='font-size:40px'></i> <i class = 'fa fa-star unchecked' style='font-size:40px'></i> <i class = 'fa fa-star unchecked' style='font-size:40px'></i>
+          <div id="allcourses"></div>
+          <script src="addcourserating.js"></script>
           <br>
           Subject: xxx
           <br>
@@ -38,5 +40,6 @@
 
     <div id="allreviews"></div>
     <!-- Adding course reviews to course page -->
+    <!-- Does this line below do anything? -->
     <script src="addcoursereviews.js"></script>
 </html>
