--- a/course.html
+++ b/course.html
@@ -17,7 +17,7 @@
   <!-- Navbar stuff: Same on all tabs -->
   <div class="navbar">
     <a class = "active" href="index.html">RatePEA</a>
-    <div class="npbutton"></div>
+    <div class="npbutton">
       <a href="newpost.html">New Post</a>
     </div>
 
