--- a/index.html
+++ b/index.html
@@ -100,8 +100,9 @@
             <a onclick="filtersubject('CSC')">CompSci</a>
           </div>
         </div>
-  
+        <div class="npbutton">
         <a href="newpost.html">New Post</a>
+        </div>
   
       </div>
     
@@ -127,5 +128,3 @@
         <script src="clickedoncourse.js"></script>
     </body>
 </html>
-
-<!--ask ariana to do logo design - maybe clocktower to put digital sketch on main screen -->
