--- a/newpost.html
+++ b/newpost.html
@@ -14,8 +14,9 @@
     <a class = "active" href="index.html">RatePEA</a>
     
    <!--EDITED DROPDOWN NAV CODE WITH NEW FILTERSUBJECT FUNCTION - need to edit the rest of the dropdown accordingly-->
-
+    <div class="npbutton">
     <a href="newpost.html">New Post</a>
+    </div>
 
   </div>
 
