--- a/course.html
+++ b/course.html
@@ -18,7 +18,7 @@
   <div class="navbar">
     <a class = "active" href="index.html">RatePEA</a>
     <div class="npbutton">
-      <a href="newpost.html">New Post</a>
+      <a href="newpost.html">NewPOST</a>
     </div>
 
   </div>
