--- a/newpost.html
+++ b/newpost.html
@@ -15,7 +15,7 @@
     
    <!--EDITED DROPDOWN NAV CODE WITH NEW FILTERSUBJECT FUNCTION - need to edit the rest of the dropdown accordingly-->
     <div class="npbutton">
-    <a href="newpost.html">New Post</a>
+    <a href="newpost.html">NewPOST</a>
     </div>
 
   </div>
