--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
           </div>
         </div>
         <div class="npbutton">
-        <a href="newpost.html">NewPOST</a>
+        <a href="newpost.html">NewPost</a>
         </div>
   
       </div>
