--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <a onclick="filtersubject('ENG2')">200s</a>
             <a onclick="filtersubject('ENG3')">300s</a>
             <a onclick="filtersubject('ENG4')">400s</a>
-            <a onclick="filtersubject('ENG5')">Electives</a>
+            <a onclick="filtersubject('ENG5')">500s</a>
           </div>
         </div>
   
@@ -48,12 +48,12 @@
               <a onclick="filtersubject('HIS3')">300s</a>
               <a onclick="filtersubject('HIS4')">US History</a>
               <a onclick="filtersubject('HIS5')">500s</a>
-              <a onclick="filtersubject('HIS6')">Others</a>
+              <a onclick="filtersubject('HIS6')">Other</a>
           </div>
         </div>
   
         <div class="subnav">
-          <button class="subnavbtn">Langauge</i></button>
+          <button class="subnavbtn">Language</i></button>
           <div class="subnav-content">
             <a onclick="filtersubject('SPA')">Spanish</a>
             <a onclick="filtersubject('FRE')">French</a>
@@ -76,7 +76,8 @@
             <a onclick="filtersubject('MAT3')">300s</a>
             <a onclick="filtersubject('MAT4')">400s</a>
             <a onclick="filtersubject('MAT5')">500s</a>
-            <a onclick="filtersubject('MAT6')">Electives</a>
+            <a onclick="filtersubject('MAT6')">600s</a>
+            <a onclick="filtersubject('MAT7')">700s</a>
           </div>
         </div>
   
@@ -87,22 +88,35 @@
             <a onclick="filtersubject('REL3')">300s</a>
             <a onclick="filtersubject('REL4')">400s</a>
             <a onclick="filtersubject('REL5')">500s</a>
-            <a onclick="filtersubject('REL6')">Others</a>
           </div>
         </div>
   
         <div class="subnav">
           <button class="subnavbtn">Science</button>
           <div class="subnav-content">
+            <a onclick="filtersubject('ANT')">Anthropology</a>
             <a onclick="filtersubject('BIO')">Biology</a>
             <a onclick="filtersubject('CHE')">Chemistry</a>
-            <a onclick="filtersubject('PHY')">Physics</a>
             <a onclick="filtersubject('CSC')">CompSci</a>
+            <a onclick="filtersubject('ECO')">Economics</a>
+            <a onclick="filtersubject('EPS')">Earth/Planetary Science</a>
+            <a onclick="filtersubject('PHY')">Physics</a>
+            <a onclick="filtersubject('PSY')">Psychology</a>
           </div>
+        </div>
+
+        <div class="subnav">
+          <button class="subnavbtn">Other</button>
+          <div class="subnav-content">
+            <a onclick="filtersubject('EXI')">Exeter Innovation</a>
+            <a onclick="filtersubject('HHD')">Health</a>
+            <a onclick="filtersubject('INT')">Integrated Studies</a>
+        </div>
         </div>
         <div class="npbutton">
         <a href="newpost.html">NewPost</a>
         </div>
+        
   
       </div>
     
