--- a/newpost.html
+++ b/newpost.html
@@ -113,7 +113,7 @@
                 <th>
                   <br>
                   <label class="labelsf" for="comments">Comments and Review (How did you enjoy the course? Would you recomend it to others?)</label>
-                  <textarea rows="10" cols="80" id = "comments" name ="coursecomments"> </textarea>
+                  <br><textarea rows="10" cols="80" id = "comments" name ="coursecomments"> </textarea></br>
                   <br>
                 </th>
                 <th>
