--- a/newpost.html
+++ b/newpost.html
@@ -29,7 +29,7 @@
         <!-- Table and content inside the table -->
         <div>
             <!-- Declaring form -->
-            <form action="/http://localhost:4000/" method="post">
+            <form action="http://localhost:4000/" method="post">
               <!-- Creating table 1 (Username)-->
               <table>
                  <th>
