--- a/course.html
+++ b/course.html
@@ -16,10 +16,8 @@
 
   <!-- Navbar stuff: Same on all tabs -->
   <div class="navbar">
-    <a class = "active" href="index.html">RatePEA</a>
-    <div class="npbutton">
-      <a href="newpost.html">NewPOST</a>
-    </div>
+    <a  class="rpbutton" class = "active" href="index.html">RatePEA</a>
+    <a class="npbutton" href="newpost.html">NewPOST</a>
 
   </div>
     <!-- Course Info -->
