--- a/course.html
+++ b/course.html
@@ -12,8 +12,7 @@
         </title>                
     </head>
 
-  <body onload="addcoursereviews()">
-  <body onload="addcourseinfo()">
+  <body onload="addcoursereviews()"> 
 
   <!-- Navbar stuff: Same on all tabs -->
   <div class="navbar">
@@ -21,9 +20,14 @@
     <a class="npbutton" href="newpost.html">NewPOST</a>
   </div>
   
-  <!-- Course Info -->
-  <div id="allInfo"></div>
-  <script src="addcourseinfo.js"></script>
+
+  <!--  This needs better formatting  -->
+    <div class="allInfo">
+      <h1 id="courseName"> </h1> <!-- ANT 500 -->
+      <h6 id="courseTitle"> </h6> <!-- Anthropology -->
+      <h1 id="courseRating"></h1>
+      <p id="courseDescription"> </p> <!-- From course catalog -->
+</div>
 
   <!-- Course Reviews -->
   <div id="allreviews"></div>
