--- a/course.html
+++ b/course.html
@@ -14,14 +14,14 @@
 
   <body onload="addcoursereviews()"> 
 
-  <!-- Navbar stuff: Same on all tabs -->
+  <!-- Navbar stuff: Same on all tabs --> 
   <div class="navbar">
     <a  class="rpbutton" class = "active" href="index.html">RatePEA</a>
     <a class="npbutton" href="newpost.html">NewPOST</a>
   </div>
   
 
-  <!--  This needs better formatting  -->
+  <!-- NEEDS BETTER FORMATTING -->
     <div class="allInfo">
       <h1 id="courseName"> </h1> <!-- ANT 500 -->
       <h6 id="courseTitle"> </h6> <!-- Anthropology -->
@@ -34,4 +34,5 @@
   <!-- Adding course reviews to course page -->
   <!-- Does this line below do anything? -->
   <script src="addcoursereviews.js"></script>
+  <script src="addcourseinfo.js"></script>
 </html>
