--- a/course.html
+++ b/course.html
@@ -17,7 +17,7 @@
   <!-- Navbar stuff: Same on all tabs --> 
   <div class="navbar">
     <a  class="rpbutton" class = "active" href="index.html">RatePEA</a>
-    <a class="npbutton" href="newpost.html">NewPOST</a>
+    <a class="npbutton" href="newpost.html">NewPost</a>
   </div>
   
 
