--- a/course.html
+++ b/course.html
@@ -22,17 +22,14 @@
   
 
   <!-- NEEDS BETTER FORMATTING -->
-    <div class="allInfo">
-      <h1 id="courseName"> </h1> <!-- ANT 500 -->
-      <h6 id="courseTitle"> </h6> <!-- Anthropology -->
-      <h1 id="courseRating"></h1>
-      <p id="courseDescription"> </p> <!-- From course catalog -->
-</div>
+  <div class = courseNameTitle id="courseNameTitle"></div>
+  <div class = courseRating id="courseRating"></div>
+  <div class = courseDescription id="courseDescription"></div>
+  
 
   <!-- Course Reviews -->
   <div id="allreviews"></div>
-  <!-- Adding course reviews to course page -->
-  <!-- Does this line below do anything? -->
+
   <script src="addcoursereviews.js"></script>
   <script src="addcourseinfo.js"></script>
 </html>
