--- a/course.html
+++ b/course.html
@@ -22,9 +22,9 @@
   
 
   <!-- NEEDS BETTER FORMATTING -->
-  <div class = courseNameTitle id="courseNameTitle"></div>
-  <div class = courseRating id="courseRating"></div>
-  <div class = courseDescription id="courseDescription"></div>
+  <div id="courseNameTitle"></div>
+  <div id="courseRating"></div>
+  <div id="courseDescription"></div>
   
 
   <!-- Course Reviews -->
