--- a/newpost.html
+++ b/newpost.html
@@ -18,7 +18,7 @@
 
   </div>
 
-    <body>
+    <body onload="addteachers()">
         <!-- Header on top of page -->
         <h2>
           Create a New Post        
@@ -122,5 +122,6 @@
             <!-- Submit Button -->
             </form>
         </div>
+<script src = "addnewpostdata.js"></script>
     </body>
 </html>
