--- a/newpost.html
+++ b/newpost.html
@@ -87,15 +87,7 @@
                   <div class = "datalist">
                     <input list = "teacher" name="teachername" placeholder="Search for Your Teacher!">
                     <datalist id="teacher">
-                      <option value="TeacherA"></option>
-                      <option value="TeacherB"></option>
-                      <option value="TeacherC"></option>
-                      <option value="TeacherD"></option>
-                      <option value="TeacherE"></option>
-                      <option value="TeacherF"></option>
-                      <option value="TeacherG"></option>
-                      <option value="TeacherH"></option>
-                      <option value="TeacherI"></option>             
+                        <!-- JavaScript inserts teachers here -->
                     </datalist>
                   </div>                 
                   <br>
