--- a/newpost.html
+++ b/newpost.html
@@ -33,7 +33,7 @@
                  <th>
                   <br>
                   <label class="labelsf" for="username">Username:</label>
-                  <input type="text" id="username" name="username" placeholder="Create a username ...">
+                  <input type="text" id="username" name="username" placeholder="Create a username ..." required>
                   <br>
                 </th>
               </table>
