--- a/newpost.html
+++ b/newpost.html
@@ -43,14 +43,14 @@
                 <th>
                   <label class="labelsf" for="coursecode">Course ID:</label>
                   <div class="ids">
-                    <input type="text" id="coursecode" name="coursecode" placeholder="As listed in the course catalog... ie. MAT321">
+                    <input type="text" id="coursecode" name="coursecode" placeholder="As listed in the course catalog... ie. MAT321" required>
                   </div>
                 </th>
                 <th>
                   <br>
                   <label class="labelsf" for="term">Term you took the course:</label>               
                   <div class = "datalist">
-                    <input list = "term" name="term" placeholder="Search for Term">
+                    <input list = "term" name="term" placeholder="Search for Term" required>
                     <!-- Datalist allows for seach and select -->
                     <datalist id="term">
                       <option value="Fall2020"></option>
@@ -85,7 +85,7 @@
                   <br>
                   <label class="labelsf" for="teachername">Teacher's Name:</label>
                   <div class = "datalist">
-                    <input list = "teacher" name="teachername" placeholder="Search for Your Teacher!">
+                    <input list = "teacher" name="teachername" placeholder="Search for Your Teacher!" required>
                     <datalist id="teacher">
                         <!-- JavaScript inserts teachers here -->
                     </datalist>
@@ -94,7 +94,7 @@
                 </th>
                 <th>
                   <label class="labelsf" for="teacherComments">Tell me about your Teacher. What dorm are they in? <br> Did they use reserve? What is their teaching style?<br></label>             
-                  <textarea rows="3" cols="50" id = "comments" name = "teachercomments"> </textarea>
+                  <textarea rows="3" cols="50" id = "comments" name = "teachercomments" required> </textarea>
                 </th>
               </table>
               <br>
@@ -103,7 +103,7 @@
                 <th>
                   <br>
                   <label class="labelsf" for="comments">Comments and Review (How did you enjoy the course? Would you recomend it to others?)</label>
-                  <br><textarea rows="10" cols="80" id = "comments" name ="coursecomments"> </textarea></br>
+                  <br><textarea rows="10" cols="80" id = "comments" name ="coursecomments" required> </textarea></br>
                   <br>
                 </th>
                 <th>
